# dashgen-rs

./: .gitignore  Cargo.toml  cli.yml
Rocket.docset/Contents/: info.plist
rocket.docset/Contents/: info.plist
src/: builder.rs  entry.rs  main.rs
